client/views/courses/members/_course.members.scss
.course-members {
	margin-top: $course-details-seperator-height;
	font-size: medium;
}

.course-member {
	background: $course-page-component-bg;
	padding: 10px ($grid-gutter-width / 2);

	&:not(:last-child) {
		margin-bottom: 1px;
	}
}

.course-member-roles {
	display: inline-block;
	list-style: none;
	margin-bottom: 0;
	@include td-margin(left, 10px);
	@include td-padding(left, 0);

	&:hover {
		cursor: default;
	}
}

.course-member-roles li {
	display: inline-block;

	&.participant {
		display: none;
	}
}

.course-member-roles .dropdown-menu li {
		padding: 5px 15px;
}

.course-member-role {
	vertical-align: middle;
	padding: 3px 6px 5px 6px;
	background: $blue;
}
.course-member-role-text{
	color: $white;
	font-size: small;
	font-weight: bold;
}
.team .course-member-role {
	padding-right: 0px;
}

.role-short {
	text-transform: uppercase;
}

.js-add-to-team-btn {
	@include td-margin(left, 6px);
	padding: 2px 6px;
}

.remove-team-btn {
	margin-top: -1px;
	padding: 3px 6px;
	color: $white;
	background: $blue;
	border: 0px;
	transition: all $default-transition-time;

	&:hover,
	&:focus {
		background: darken($blue, 10%);
		color: $white;
		border: 0px;
	}
}

.js-remove-team {
	padding: 6px 24px;
}

.course-member-comment {
	display: block;
	padding-top: 10px;
}

.course-member-comment .editable {
	@include td-padding(left, 0 !important);
}

